ADD missing payment status properties

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -306,6 +306,11 @@ orderConfirmationMyAccount = "Mein Konto"
 orderConfirmationOrderId = "Auftrags-ID"
 orderConfirmationPaymentMethod = "Zahlungsart"
 orderConfirmationPaymentStatus = "Zahlungsstatus"
+orderConfirmationPaymentStatus_fullyPaid = "Bezahlt"
+orderConfirmationPaymentStatus_overpaid = "Überzahlt"
+orderConfirmationPaymentStatus_partlyPaid = "Teilweise bezahlt"
+orderConfirmationPaymentStatus_prepaid = "Im Voraus bezahlt"
+orderConfirmationPaymentStatus_unpaid = "Nicht bezahlt"
 orderConfirmationPeace = "Stückzahl"
 orderConfirmationPricePerPiece = "Einzelpreis"
 orderConfirmationSameAsInvoice = "Lieferadresse gleich Rechnungsadresse"
@@ -335,6 +340,11 @@ orderHistoryOrderDetails = "Bestelldetails"
 orderHistoryOrderId = "Auftrags-ID"
 orderHistoryPaymentMethod = "Zahlungsart"
 orderHistoryPaymentStatus = "Zahlungsstatus"
+orderHistoryPaymentStatus_fullyPaid = "Bezahlt"
+orderHistoryPaymentStatus_overpaid = "Überzahlt"
+orderHistoryPaymentStatus_partlyPaid = "Teilweise bezahlt"
+orderHistoryPaymentStatus_prepaid = "Im Voraus bezahlt"
+orderHistoryPaymentStatus_unpaid = "Nicht bezahlt"
 orderHistoryReturnSendBack = "Artikel zurücksenden"
 orderHistoryShow = "Zeige :countStart - :countEnd von :orderMaxCount Aufträgen"
 orderHistoryStatus = "Status"
@@ -514,13 +524,6 @@ wishListRemoved = "Der Artikel wurde von der Wunschliste entfernt."
 ;     accPleaseLogin = "Bitte einloggen"
 ;     accLogoutSuccessful = "Sie wurden erfolgreich ausgeloggt."
 ;     accAlreadyLoggedIn = "Sie sind bereits eingeloggt."
-
-;     // payment
-;     paymentStatus_fullyPaid = "Bezahlt"
-;     paymentStatus_overpaid = "Überzahlt"
-;     paymentStatus_partlyPaid = "Teilweise bezahlt"
-;     paymentStatus_prepaid = "Im Voraus bezahlt"
-;     paymentStatus_unpaid = "Nicht bezahlt"
 
 ;     // general
 ;     generalAdd = "Anlegen"
