--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -306,6 +306,11 @@ orderConfirmationMyAccount = "My account"
 orderConfirmationOrderId = "Order ID"
 orderConfirmationPaymentMethod = "Payment method"
 orderConfirmationPaymentStatus = "Payment status"
+orderConfirmationPaymentStatus_fullyPaid = "Paid"
+orderConfirmationPaymentStatus_overpaid = "Overpaid"
+orderConfirmationPaymentStatus_partlyPaid = "Partially paid"
+orderConfirmationPaymentStatus_prepaid = "Prepaid"
+orderConfirmationPaymentStatus_unpaid = "Not paid"
 orderConfirmationPeace = "Quantity"
 orderConfirmationPricePerPiece = "Price per piece"
 orderConfirmationSameAsInvoice = "Delivery address same as invoice address"
@@ -335,6 +340,11 @@ orderHistoryOrderDetails = "Order details"
 orderHistoryOrderId = "Order ID"
 orderHistoryPaymentMethod = "Payment method"
 orderHistoryPaymentStatus = "Payment status"
+orderHistoryPaymentStatus_fullyPaid = "Paid"
+orderHistoryPaymentStatus_overpaid = "Overpaid"
+orderHistoryPaymentStatus_partlyPaid = "Partially paid"
+orderHistoryPaymentStatus_prepaid = "Prepaid"
+orderHistoryPaymentStatus_unpaid = "Not paid"
 orderHistoryReturnSendBack = "Return items"
 orderHistoryShow = "Show :countStart - :countEnd of :orderMaxCount orders"
 orderHistoryStatus = "Status:"
@@ -554,11 +564,6 @@ wishListRemoved = "The item was removed from your wish list."
 ; orderStatusHistory = "Status history"
 ; orderTo = "To"
 ; orderWeShip = "Your order is shipped by"
-; paymentStatus_fullyPaid = "Paid"
-; paymentStatus_overpaid = "Overpaid"
-; paymentStatus_partlyPaid = "Partially paid"
-; paymentStatus_prepaid = "Prepaid"
-; paymentStatus_unpaid = "Not paid"
 ; pl = "Polish"
 ; pt = "Portuguese"
 ; ro = "Romanian"
