UPDATE replace shy with property variables

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -61,19 +61,17 @@ basketValue = "Warenwert"
 basketVAT = "MwSt."
 ; basket - Warenkorb
 ; cancellationForm - Widerrufsformular
-cancellationForm = "Widerrufs&shy;formular"
-cancellationFormNoShy = "Widerrufsformular"
+cancellationForm = "Widerrufs:hyphenformular"
 cancellationFormPrint = "Drucken"
 ; cancellationForm - Widerrufsformular
 ; cancellationRights - Widerrufsbelehrung
-cancellationRightsNoShy = "Widerrufsrecht"
-cancellationRights = "Widerrufs&shy;recht"
+cancellationRights = "Widerrufs:hyphenrecht"
 ; cancellationRights - Widerrufsbelehrung
 ; checkout - Kaufabwicklung
 checkout = "Kasse"
 checkoutBasket = "Warenkorb"
 checkoutBuyNow = "Kaufen"
-checkoutCancellationRight = "Widerrufs&shy;recht"
+checkoutCancellationRight = "Widerrufs:hyphenrecht"
 checkoutCheckEntries = "Bitte Eingaben prüfen."
 checkoutChooseOur = "Bitte nehmen Sie unsere :gtc, :cancellation und :policy zur Kenntnis."
 checkoutContactWish = "Hinweise und Wünsche"
@@ -86,7 +84,7 @@ checkoutMethodOfPaymentChanged="Die von Ihnen ausgewähle Zahlart ist nicht mehr
 checkoutMethodOfPaymentListChanged="Die Liste der Zahlungsarten hat sich geändert."
 checkoutNet = "Netto"
 checkoutPaymentMethod = "Zahlungsart"
-checkoutPrivacyPolicy = "Daten&shy;schutz&shy;erklärung"
+checkoutPrivacyPolicy = "Daten:hyphenschutz:hyphenerklärung"
 checkoutShippingAddress = "Lieferadresse"
 checkoutShippingProfile = "Versandart"
 checkoutShippingProfileChanged="Die von Ihnen ausgewähle Versandart ist nicht mehr verfügbar."
@@ -109,7 +107,7 @@ contactMessage = "Nachricht"
 contactName = "Name"
 contactOptional = "optional"
 contactOrderId = "Auftrags-ID"
-contactPrivacyPolicy = "Daten&shy;schutz&shy;erklärung"
+contactPrivacyPolicy = "Daten:hyphenschutz:hyphenerklärung"
 contactRequiredField = "Hierbei handelt es sich um ein Pflichtfeld."
 contactSend = "Anfrage senden"
 contactSenderMail = "Absender-E-Mail"
@@ -163,15 +161,15 @@ devVueErrorTitle = "Vue.js konnte nicht initialisiert werden."
 ; dev - Entwickler
 ; footer - Footer
 footerAllRightsReserved = "Alle Rechte vorbehalten."
-footerCancellationForm = "Widerrufs&shy;formular"
-footerCancellationRight = "Widerrufs&shy;recht"
+footerCancellationForm = "Widerrufs:hyphenformular"
+footerCancellationRight = "Widerrufs:hyphenrecht"
 footerCertifiedBy = "Geprüfte Leistung"
 footerContact = "Kontakt"
 footerGtc = "AGB"
 footerLegalDisclosure = "Impressum"
 footerOrderShippedBy = "Wir verschicken mit"
 footerPaymentMethods = "Zahlungsarten"
-footerPrivacyPolicy = "Daten&shy;schutz&shy;erklärung"
+footerPrivacyPolicy = "Daten:hyphenschutz:hyphenerklärung"
 ; footer - Footer
 ; header - Header
 headerBg = "Bulgarisch"
@@ -360,8 +358,7 @@ orderHistoryStatus = "Status"
 orderHistoryTime = "Uhr"
 ; orderHistory - Auftragshistorie
 ; privacyPolicy - Datenschutzerklärung
-privacyPolicy = "Daten&shy;schutz&shy;erklärung"
-privacyPolicyNoShy = "Datenschutzerklärung"
+privacyPolicy = "Daten:hyphenschutz:hyphenerklärung"
 ; privacyPolicy - Datenschutzerklärung
 ; reg - Registrierung
 regContactInformations = "Hinweise zur Registrierung"
