--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -61,19 +61,17 @@ basketValue = "Value of items"
 basketVAT = "VAT"
 ; basket - Warenkorb
 ; cancellationForm - Widerrufsformular
-cancellationForm = "Cancellation&shy; form"
-cancellationFormNoShy = "Cancellation form"
+cancellationForm = "Cancellation:hyphen form"
 cancellationFormPrint = "Print"
 ; cancellationForm - Widerrufsformular
 ; cancellationRights - Widerrufsbelehrung
-cancellationRights = "Cancellation&shy; rights"
-cancellationRightsNoShy = "Cancellation rights"
+cancellationRights = "Cancellation:hyphen rights"
 ; cancellationRights - Widerrufsbelehrung
 ; checkout - Kaufabwicklung
 checkout = "Checkout"
 checkoutBasket = "Shopping cart"
 checkoutBuyNow = "Order now"
-checkoutCancellationRight = "Cancellation&shy; rights"
+checkoutCancellationRight = "Cancellation:hyphen rights"
 checkoutCheckEntries = "Please check the entries."
 checkoutChooseOur = "Please accept our :gtc, :cancellation and :policy."
 checkoutContactWish = "Notes and requests"
@@ -86,7 +84,7 @@ checkoutMethodOfPaymentChanged="The selected payment method is not available any
 checkoutMethodOfPaymentListChanged="The list of payment methods has been updated."
 checkoutNet = "Net"
 checkoutPaymentMethod = "Payment method"
-checkoutPrivacyPolicy = "Privacy&shy; policy"
+checkoutPrivacyPolicy = "Privacy:hyphen policy"
 checkoutShippingAddress = "Delivery address"
 checkoutShippingProfile = "Shipping method"
 checkoutShippingProfileChanged="The selected shipping method is not available anymore."
@@ -109,7 +107,7 @@ contactMessage = "Message"
 contactName = "Name"
 contactOptional = "optional"
 contactOrderId = "Order ID"
-contactPrivacyPolicy = "Privacy&shy; policy"
+contactPrivacyPolicy = "Privacy:hyphen policy"
 contactRequiredField = "This is a required field."
 contactSend = "Send request"
 contactSenderMail = "Sender email address"
@@ -163,15 +161,15 @@ devVueErrorTitle = "Vue.js could not be initialised."
 ; dev - Entwickler
 ; footer - Footer
 footerAllRightsReserved = "All rights reserved."
-footerCancellationForm = "Cancellation&shy; form"
-footerCancellationRight = "Cancellation&shy; rights"
+footerCancellationForm = "Cancellation:hyphen form"
+footerCancellationRight = "Cancellation:hyphen rights"
 footerCertifiedBy = "Certified by"
 footerContact = "Contact"
 footerGtc = "Terms and conditions"
 footerLegalDisclosure = "Legal disclosure"
 footerOrderShippedBy = "Your order is shipped by"
 footerPaymentMethods = "Payment methods"
-footerPrivacyPolicy = "Privacy&shy; policy"
+footerPrivacyPolicy = "Privacy:hyphen policy"
 ; footer - Footer
 ; header - Header
 headerBg = "Bulgarian"
@@ -360,8 +358,7 @@ orderHistoryStatus = "Status:"
 orderHistoryTime = ""
 ; orderHistory - Auftragshistorie
 ; privacyPolicy - Datenschutzerklärung
-privacyPolicy = "Privacy&shy; policy"
-privacyPolicyNoShy = "Privacy policy"
+privacyPolicy = "Privacy:hyphen policy"
 ; privacyPolicy - Datenschutzerklärung
 ; reg - Registrierung
 regContactInformations = "Registration information"
