REFACTOR Widget.properties to match other templates key formatting

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -1,28 +1,28 @@
-header_label = "Header"
-header_text_label = "Headertext"
-header_text_tooltip = "Headertext eingeben."
+headerLabel = "Header"
+headerTextLabel = "Headertext"
+headerTextTooltip = "Headertext eingeben."
 
-imageCarousel_label = "Bilderkarussell"
-imageCarousel_slide1 = "Slide 1"
-imageCarousel_slide2 = "Slide 2"
-imageCarousel_slide3 = "Slide 3"
-imageCarousel_categoryId_label = "Kategorie-ID"
-imageCarousel_categoryId_tooltip = "Name und Bild werden angezeigt."
-imageCarousel_variationId_label = "Varianten-ID"
-imageCarousel_variationId_tooltip = "Name und Bild werden angezeigt. Wenn eine Kategorie-ID angegeben ist, greift die Varianten-ID nicht."
-imageCarousel_customImagePath_label = "Bild-URL"
-imageCarousel_customImagePath_tooltip = "Bild-URL eingeben. Dieses Bild ersetzt das Bild der Kategorie oder der Variante."
+imageCarouselLabel = "Bilderkarussell"
+imageCarouselSlide1 = "Slide 1"
+imageCarouselSlide2 = "Slide 2"
+imageCarouselSlide3 = "Slide 3"
+imageCarouselCategoryIdLabel = "Kategorie-ID"
+imageCarouselCategoryIdTooltip = "Name und Bild werden angezeigt."
+imageCarouselVariationIdLabel = "Varianten-ID"
+imageCarouselVariationIdTooltip = "Name und Bild werden angezeigt. Wenn eine Kategorie-ID angegeben ist, greift die Varianten-ID nicht."
+imageCarouselCustomImagePathLabel = "Bild-URL"
+imageCarouselCustomImagePathTooltip = "Bild-URL eingeben. Dieses Bild ersetzt das Bild der Kategorie oder der Variante."
 
-imageBox_label = "Bilderbox"
-imageBox_style_label = "Stil der Box"
-imageBox_style_tooltip = "Stil der Box auswählen."
-imageBox_style_large = "Name (groß) und Bild"
-imageBox_style_small = "Name (klein) und Bild"
-imageBox_style_fullwidth = "Name (vollbreite Fußzeile) und Bild"
-imageBox_imageSize_label = "Größe des Bilds"
-imageBox_imageSize_tooltip = "Auswählen, um das Bild in voller Breite oder auf die Höhe der Box skaliert anzuzeigen."
-imageBox_imageSize_cover = "Volle Breite"
-imageBox_imageSize_contain = "Skaliert"
+imageBoxLabel = "Bilderbox"
+imageBoxStyleLabel = "Stil der Box"
+imageBoxStyleTooltip = "Stil der Box auswählen."
+imageBoxStyleLarge = "Name (groß) und Bild"
+imageBoxStyleSmall = "Name (klein) und Bild"
+imageBoxStyleFullwidth = "Name (vollbreite Fußzeile) und Bild"
+imageBoxImageSizeLabel = "Größe des Bilds"
+imageBoxImageSizeTooltip = "Auswählen, um das Bild in voller Breite oder auf die Höhe der Box skaliert anzuzeigen."
+imageBoxImageSizeCover = "Volle Breite"
+imageBoxImageSizeContain = "Skaliert"
 imageBox_categoryId_label = "Kategorie-ID"
 imageBox_categoryId_tooltip = "Name und Bild werden angezeigt."
 imageBox_variationId_label = "Varianten-ID"
