--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -1,28 +1,28 @@
-header_label = "Header"
-header_text_label = "Header text"
-header_text_tooltip = "Enter the header text."
+headerLabel = "Header"
+headerTextLabel = "Header text"
+headerTextTooltip = "Enter the header text."
 
-imageCarousel_label = "Image carousel"
-imageCarousel_slide1 = "Slide 1"
-imageCarousel_slide2 = "Slide 2"
-imageCarousel_slide3 = "Slide 3"
-imageCarousel_categoryId_label = "Category ID"
-imageCarousel_categoryId_tooltip = "Name and image are displayed."
-imageCarousel_variationId_label = "Variation ID"
-imageCarousel_variationId_tooltip = "Name and image are displayed. If a category ID has been entered, the variation ID does not apply."
-imageCarousel_customImagePath_label = "Image URL"
-imageCarousel_customImagePath_tooltip = "Enter the image URL. This image replaces the category or variation image."
+imageCarouselLabel = "Image carousel"
+imageCarouselSlide1 = "Slide 1"
+imageCarouselSlide2 = "Slide 2"
+imageCarouselSlide3 = "Slide 3"
+imageCarouselCategoryIdLabel = "Category ID"
+imageCarouselCategoryIdTooltip = "Name and image are displayed."
+imageCarouselVariationIdLabel = "Variation ID"
+imageCarouselVariationIdTooltip = "Name and image are displayed. If a category ID has been entered, the variation ID does not apply."
+imageCarouselCustomImagePathLabel = "Image URL"
+imageCarouselCustomImagePathTooltip = "Enter the image URL. This image replaces the category or variation image."
 
-imageBox_label = "Image box"
-imageBox_style_label = "Box style"
-imageBox_style_tooltip = "Select box style"
-imageBox_style_large = "Name (large) and image"
-imageBox_style_small = "Name (small) and image"
-imageBox_style_fullwidth = "Name (fullwidth footer) and image"
-imageBox_imageSize_label = "Image size"
-imageBox_imageSize_tooltip = "Select if the image is displayed in fullwidth or resized to the height of the box."
-imageBox_imageSize_cover = "Fullwidth"
-imageBox_imageSize_contain = "Resized"
+imageBoxLabel = "Image box"
+imageBoxStyleLabel = "Box style"
+imageBoxStyleTooltip = "Select box style"
+imageBoxStyleLarge = "Name (large) and image"
+imageBoxStyleSmall = "Name (small) and image"
+imageBoxStyleFullwidth = "Name (fullwidth footer) and image"
+imageBoxImageSizeLabel = "Image size"
+imageBoxImageSizeTooltip = "Select if the image is displayed in fullwidth or resized to the height of the box."
+imageBoxImageSizeCover = "Fullwidth"
+imageBoxImageSizeContain = "Resized"
 imageBox_categoryId_label = "Category ID"
 imageBox_categoryId_tooltip = "Name and image are displayed."
 imageBox_variationId_label = "Variation ID"
