CHANGE widget translation keys

--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -23,29 +23,29 @@ imageBox_imageSize_label = "Image size"
 imageBox_imageSize_tooltip = "Select if the image is displayed in fullwidth or resized to the height of the box."
 imageBox_imageSize_cover = "Fullwidth"
 imageBox_imageSize_contain = "Resized"
-imageBox_categoryId_label = "Category ID"
-imageBox_categoryId_tooltip = "Name and image are displayed."
-imageBox_variationId_label = "Variation ID"
-imageBox_variationId_tooltip = "Name and image are displayed. If a category ID has been entered, the variation ID does not apply."
-imageBox_customImagePath_label = "Image URL"
-imageBox_customImagePath_tooltip = "Enter the image URL. This image replaces the category or variation image."
-imageBox_placeholder_name = "Name"
-imageBox_placeholder_image = "data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22800%22%20height%3D%22400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20800%20400%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_161c3653395%20text%20%7B%20fill%3A%23555%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A40pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_161c3653395%22%3E%3Crect%20width%3D%22800%22%20height%3D%22400%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22285.921875%22%20y%3D%22218.45%22%3E%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+imageBoxCategoryIdLabel = "Category ID"
+imageBoxCategoryIdTooltip = "Name and image are displayed."
+imageBoxVariationIdLabel = "Variation ID"
+imageBoxVariationIdTooltip = "Name and image are displayed. If a category ID has been entered, the variation ID does not apply."
+imageBoxCustomImagePathLabel = "Image URL"
+imageBoxCustomImagePathTooltip = "Enter the image URL. This image replaces the category or variation image."
+imageBoxPlaceholderName = "Name"
+imageBoxPlaceholderImage = "data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22800%22%20height%3D%22400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20800%20400%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_161c3653395%20text%20%7B%20fill%3A%23555%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A40pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_161c3653395%22%3E%3Crect%20width%3D%22800%22%20height%3D%22400%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22285.921875%22%20y%3D%22218.45%22%3E%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
 
-itemList_label = "Item list"
-itemList_listType_label = "Item list type"
-itemList_listType_tooltip = "Select the type of item list."
-itemList_listType_category = "Category items"
-itemList_listType_lastseen = "Last seen items"
-itemList_listType_taglist = "Items with tags"
-itemList_categoryId_label = "Category ID"
-itemList_categoryId_tooltip = "Select the category from which the item list is generated."
-itemList_tagId_label = "Tag"
-itemList_tagId_tooltip = "Enter the tag ID from which the item list is generated."
-itemList_itemSort_label = "Item sorting"
-itemList_itemSort_tooltip = "Select the type of item sorting."
-itemList_maxItems_label = "Maximum number of displayed items"
-itemList_maxItems_tooltip = "Enter the maximum number of items displayed on the list."
-itemList_placeholder_listHeader = "Item list"
-itemList_placeholder_itemName = "Item name"
-itemList_placeholder_itemPrice = "Item price"
+itemListLabel = "Item list"
+itemListListTypeLabel = "Item list type"
+itemListListTypeTooltip = "Select the type of item list."
+itemListListTypeCategory = "Category items"
+itemListListTypeLastseen = "Last seen items"
+itemListListTypeTaglist = "Items with tags"
+itemListCategoryIdLabel = "Category ID"
+itemListCategoryIdTooltip = "Select the category from which the item list is generated."
+itemListTagIdLabel = "Tag"
+itemListTagIdTooltip = "Enter the tag ID from which the item list is generated."
+itemListItemSortLabel = "Item sorting"
+itemListItemSortTooltip = "Select the type of item sorting."
+itemListMaxItemsLabel = "Maximum number of displayed items"
+itemListMaxItemsTooltip = "Enter the maximum number of items displayed on the list."
+itemListPlaceholderListHeader = "Item list"
+itemListPlaceholderItemName = "Item name"
+itemListPlaceholderItemPrice = "Item price"
