--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -23,29 +23,29 @@ imageBox_imageSize_label = "Größe des Bilds"
 imageBox_imageSize_tooltip = "Auswählen, um das Bild in voller Breite oder auf die Höhe der Box skaliert anzuzeigen."
 imageBox_imageSize_cover = "Volle Breite"
 imageBox_imageSize_contain = "Skaliert"
-imageBox_categoryId_label = "Kategorie-ID"
-imageBox_categoryId_tooltip = "Name und Bild werden angezeigt."
-imageBox_variationId_label = "Varianten-ID"
-imageBox_variationId_tooltip = "Name und Bild werden angezeigt. Wenn eine Kategorie-ID angegeben ist, greift die Varianten-ID nicht."
-imageBox_customImagePath_label = "Bild-URL"
-imageBox_customImagePath_tooltip = "Bild-URL eingeben. Dieses Bild ersetzt das Bild der Kategorie oder der Variante."
-imageBox_placeholder_name = "Name"
-imageBox_placeholder_image = "data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22800%22%20height%3D%22400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20800%20400%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_161c3653395%20text%20%7B%20fill%3A%23555%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A40pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_161c3653395%22%3E%3Crect%20width%3D%22800%22%20height%3D%22400%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22285.921875%22%20y%3D%22218.45%22%3E%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+imageBoxCategoryIdLabel = "Kategorie-ID"
+imageBoxCategoryIdTooltip = "Name und Bild werden angezeigt."
+imageBoxVariationIdLabel = "Varianten-ID"
+imageBoxVariationIdTooltip = "Name und Bild werden angezeigt. Wenn eine Kategorie-ID angegeben ist, greift die Varianten-ID nicht."
+imageBoxCustomImagePathLabel = "Bild-URL"
+imageBoxCustomImagePathTooltip = "Bild-URL eingeben. Dieses Bild ersetzt das Bild der Kategorie oder der Variante."
+imageBoxPlaceholderName = "Name"
+imageBoxPlaceholderImage = "data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22800%22%20height%3D%22400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20800%20400%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_161c3653395%20text%20%7B%20fill%3A%23555%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A40pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_161c3653395%22%3E%3Crect%20width%3D%22800%22%20height%3D%22400%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22285.921875%22%20y%3D%22218.45%22%3E%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
 
-itemList_label = "Artikelliste"
-itemList_listType_label = "Art der Artikelliste"
-itemList_listType_tooltip = "Art der Artikelliste wählen."
-itemList_listType_category = "Kategorieartikel"
-itemList_listType_lastseen = "Zuletzt angesehene Artikel"
-itemList_listType_taglist = "Artikel mit Tags"
-itemList_categoryId_label = "Kategorie-ID "
-itemList_categoryId_tooltip = "Kategorie wählen, anhand welcher die Artikelliste erstellt wird."
-itemList_tagId_label = "Tag"
-itemList_tagId_tooltip = "Tag-ID eingeben, anhand welcher die Artikelliste erstellt wird."
-itemList_itemSort_label = "Artikelsortierung"
-itemList_itemSort_tooltip = "Art der Artikelsortierung wählen."
-itemList_maxItems_label = "Maximale Anzahl der angezeigten Artikel"
-itemList_maxItems_tooltip = "Maximale Zahl der in der Liste angezeigten Artikel eingeben."
-itemList_placeholder_listHeader = "Artikelliste"
-itemList_placeholder_itemName = "Artikelname"
-itemList_placeholder_itemPrice = "Artikelpreis"
+itemListLabel = "Artikelliste"
+itemListListTypeLabel = "Art der Artikelliste"
+itemListListTypeTooltip = "Art der Artikelliste wählen."
+itemListListTypeCategory = "Kategorieartikel"
+itemListListTypeLastseen = "Zuletzt angesehene Artikel"
+itemListListTypeTaglist = "Artikel mit Tags"
+itemListCategoryIdLabel = "Kategorie-ID "
+itemListCategoryIdTooltip = "Kategorie wählen, anhand welcher die Artikelliste erstellt wird."
+itemListTagIdLabel = "Tag"
+itemListTagIdTooltip = "Tag-ID eingeben, anhand welcher die Artikelliste erstellt wird."
+itemListItemSortLabel = "Artikelsortierung"
+itemListItemSortTooltip = "Art der Artikelsortierung wählen."
+itemListMaxItemsLabel = "Maximale Anzahl der angezeigten Artikel"
+itemListMaxItemsTooltip = "Maximale Zahl der in der Liste angezeigten Artikel eingeben."
+itemListPlaceholderListHeader = "Artikelliste"
+itemListPlaceholderItemName = "Artikelname"
+itemListPlaceholderItemPrice = "Artikelpreis"
