--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -1,51 +1,52 @@
+; Header
 headerLabel = "Header"
 headerTextLabel = "Headertext"
 headerTextTooltip = "Headertext eingeben."
-
+; Image box
+imageBoxCategoryIdLabel = "Kategorie-ID"
+imageBoxCategoryIdTooltip = "Name und Bild werden angezeigt."
+imageBoxCustomImagePathLabel = "Bild-URL"
+imageBoxCustomImagePathTooltip = "Bild-URL eingeben. Dieses Bild ersetzt das Bild der Kategorie oder der Variante."
+imageBoxImageSizeContain = "Skaliert"
+imageBoxImageSizeCover = "Volle Breite"
+imageBoxImageSizeLabel = "Größe des Bilds"
+imageBoxImageSizeTooltip = "Auswählen, um das Bild in voller Breite oder auf die Höhe der Box skaliert anzuzeigen."
+imageBoxLabel = "Bilderbox"
+imageBoxPlaceholderImage = "data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22800%22%20height%3D%22400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20800%20400%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_161c3653395%20text%20%7B%20fill%3A%23555%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A40pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_161c3653395%22%3E%3Crect%20width%3D%22800%22%20height%3D%22400%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22285.921875%22%20y%3D%22218.45%22%3E%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+imageBoxPlaceholderName = "Name"
+imageBoxStyleFullwidth = "Name (vollbreite Fußzeile) und Bild"
+imageBoxStyleLabel = "Stil der Box"
+imageBoxStyleLarge = "Name (groß) und Bild"
+imageBoxStyleSmall = "Name (klein) und Bild"
+imageBoxStyleTooltip = "Stil der Box auswählen."
+imageBoxVariationIdLabel = "Varianten-ID"
+imageBoxVariationIdTooltip = "Name und Bild werden angezeigt. Wenn eine Kategorie-ID angegeben ist, greift die Varianten-ID nicht."
+; Image carousel
+imageCarouselCategoryIdLabel = "Kategorie-ID"
+imageCarouselCategoryIdTooltip = "Name und Bild werden angezeigt."
+imageCarouselCustomImagePathLabel = "Bild-URL"
+imageCarouselCustomImagePathTooltip = "Bild-URL eingeben. Dieses Bild ersetzt das Bild der Kategorie oder der Variante."
 imageCarouselLabel = "Bilderkarussell"
 imageCarouselSlide1 = "Slide 1"
 imageCarouselSlide2 = "Slide 2"
 imageCarouselSlide3 = "Slide 3"
-imageCarouselCategoryIdLabel = "Kategorie-ID"
-imageCarouselCategoryIdTooltip = "Name und Bild werden angezeigt."
 imageCarouselVariationIdLabel = "Varianten-ID"
 imageCarouselVariationIdTooltip = "Name und Bild werden angezeigt. Wenn eine Kategorie-ID angegeben ist, greift die Varianten-ID nicht."
-imageCarouselCustomImagePathLabel = "Bild-URL"
-imageCarouselCustomImagePathTooltip = "Bild-URL eingeben. Dieses Bild ersetzt das Bild der Kategorie oder der Variante."
-
-imageBoxCategoryIdLabel = "Kategorie-ID"
-imageBoxCategoryIdTooltip = "Name und Bild werden angezeigt."
-imageBoxVariationIdLabel = "Varianten-ID"
-imageBoxVariationIdTooltip = "Name und Bild werden angezeigt. Wenn eine Kategorie-ID angegeben ist, greift die Varianten-ID nicht."
-imageBoxCustomImagePathLabel = "Bild-URL"
-imageBoxCustomImagePathTooltip = "Bild-URL eingeben. Dieses Bild ersetzt das Bild der Kategorie oder der Variante."
-imageBoxPlaceholderName = "Name"
-imageBoxPlaceholderImage = "data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22800%22%20height%3D%22400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20800%20400%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_161c3653395%20text%20%7B%20fill%3A%23555%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A40pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_161c3653395%22%3E%3Crect%20width%3D%22800%22%20height%3D%22400%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22285.921875%22%20y%3D%22218.45%22%3E%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-imageBoxLabel = "Bilderbox"
-imageBoxStyleLabel = "Stil der Box"
-imageBoxStyleTooltip = "Stil der Box auswählen."
-imageBoxStyleLarge = "Name (groß) und Bild"
-imageBoxStyleSmall = "Name (klein) und Bild"
-imageBoxStyleFullwidth = "Name (vollbreite Fußzeile) und Bild"
-imageBoxImageSizeLabel = "Größe des Bilds"
-imageBoxImageSizeTooltip = "Auswählen, um das Bild in voller Breite oder auf die Höhe der Box skaliert anzuzeigen."
-imageBoxImageSizeCover = "Volle Breite"
-imageBoxImageSizeContain = "Skaliert"
-
-itemListLabel = "Artikelliste"
-itemListListTypeLabel = "Art der Artikelliste"
-itemListListTypeTooltip = "Art der Artikelliste wählen."
-itemListListTypeCategory = "Kategorieartikel"
-itemListListTypeLastseen = "Zuletzt angesehene Artikel"
-itemListListTypeTaglist = "Artikel mit Tags"
+; Item list
 itemListCategoryIdLabel = "Kategorie-ID "
 itemListCategoryIdTooltip = "Kategorie wählen, anhand welcher die Artikelliste erstellt wird."
-itemListTagIdLabel = "Tag"
-itemListTagIdTooltip = "Tag-ID eingeben, anhand welcher die Artikelliste erstellt wird."
 itemListItemSortLabel = "Artikelsortierung"
 itemListItemSortTooltip = "Art der Artikelsortierung wählen."
+itemListLabel = "Artikelliste"
+itemListListTypeCategory = "Kategorieartikel"
+itemListListTypeLabel = "Art der Artikelliste"
+itemListListTypeLastseen = "Zuletzt angesehene Artikel"
+itemListListTypeTaglist = "Artikel mit Tags"
+itemListListTypeTooltip = "Art der Artikelliste wählen."
 itemListMaxItemsLabel = "Maximale Anzahl der angezeigten Artikel"
 itemListMaxItemsTooltip = "Maximale Zahl der in der Liste angezeigten Artikel eingeben."
-itemListPlaceholderListHeader = "Artikelliste"
 itemListPlaceholderItemName = "Artikelname"
 itemListPlaceholderItemPrice = "Artikelpreis"
+itemListPlaceholderListHeader = "Artikelliste"
+itemListTagIdLabel = "Tag"
+itemListTagIdTooltip = "Tag-ID eingeben, anhand welcher die Artikelliste erstellt wird."
