--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -1,51 +1,52 @@
+; Header
 headerLabel = "Header"
 headerTextLabel = "Header text"
 headerTextTooltip = "Enter the header text."
-
+; Image box
+imageBoxCategoryIdLabel = "Category ID"
+imageBoxCategoryIdTooltip = "Name and image are displayed."
+imageBoxCustomImagePathLabel = "Image URL"
+imageBoxCustomImagePathTooltip = "Enter the image URL. This image replaces the category or variation image."
+imageBoxImageSizeContain = "Resized"
+imageBoxImageSizeCover = "Fullwidth"
+imageBoxImageSizeLabel = "Image size"
+imageBoxImageSizeTooltip = "Select if the image is displayed in fullwidth or resized to the height of the box."
+imageBoxLabel = "Image box"
+imageBoxPlaceholderImage = "data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22800%22%20height%3D%22400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20800%20400%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_161c3653395%20text%20%7B%20fill%3A%23555%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A40pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_161c3653395%22%3E%3Crect%20width%3D%22800%22%20height%3D%22400%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22285.921875%22%20y%3D%22218.45%22%3E%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+imageBoxPlaceholderName = "Name"
+imageBoxStyleFullwidth = "Name (fullwidth footer) and image"
+imageBoxStyleLabel = "Box style"
+imageBoxStyleLarge = "Name (large) and image"
+imageBoxStyleSmall = "Name (small) and image"
+imageBoxStyleTooltip = "Select box style"
+imageBoxVariationIdLabel = "Variation ID"
+imageBoxVariationIdTooltip = "Name and image are displayed. If a category ID has been entered, the variation ID does not apply."
+; Image carousel
+imageCarouselCategoryIdLabel = "Category ID"
+imageCarouselCategoryIdTooltip = "Name and image are displayed."
+imageCarouselCustomImagePathLabel = "Image URL"
+imageCarouselCustomImagePathTooltip = "Enter the image URL. This image replaces the category or variation image."
 imageCarouselLabel = "Image carousel"
 imageCarouselSlide1 = "Slide 1"
 imageCarouselSlide2 = "Slide 2"
 imageCarouselSlide3 = "Slide 3"
-imageCarouselCategoryIdLabel = "Category ID"
-imageCarouselCategoryIdTooltip = "Name and image are displayed."
 imageCarouselVariationIdLabel = "Variation ID"
 imageCarouselVariationIdTooltip = "Name and image are displayed. If a category ID has been entered, the variation ID does not apply."
-imageCarouselCustomImagePathLabel = "Image URL"
-imageCarouselCustomImagePathTooltip = "Enter the image URL. This image replaces the category or variation image."
-
-imageBoxCategoryIdLabel = "Category ID"
-imageBoxCategoryIdTooltip = "Name and image are displayed."
-imageBoxVariationIdLabel = "Variation ID"
-imageBoxVariationIdTooltip = "Name and image are displayed. If a category ID has been entered, the variation ID does not apply."
-imageBoxCustomImagePathLabel = "Image URL"
-imageBoxCustomImagePathTooltip = "Enter the image URL. This image replaces the category or variation image."
-imageBoxPlaceholderName = "Name"
-imageBoxPlaceholderImage = "data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22800%22%20height%3D%22400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20800%20400%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_161c3653395%20text%20%7B%20fill%3A%23555%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A40pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_161c3653395%22%3E%3Crect%20width%3D%22800%22%20height%3D%22400%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22285.921875%22%20y%3D%22218.45%22%3E%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-imageBoxLabel = "Image box"
-imageBoxStyleLabel = "Box style"
-imageBoxStyleTooltip = "Select box style"
-imageBoxStyleLarge = "Name (large) and image"
-imageBoxStyleSmall = "Name (small) and image"
-imageBoxStyleFullwidth = "Name (fullwidth footer) and image"
-imageBoxImageSizeLabel = "Image size"
-imageBoxImageSizeTooltip = "Select if the image is displayed in fullwidth or resized to the height of the box."
-imageBoxImageSizeCover = "Fullwidth"
-imageBoxImageSizeContain = "Resized"
-
-itemListLabel = "Item list"
-itemListListTypeLabel = "Item list type"
-itemListListTypeTooltip = "Select the type of item list."
-itemListListTypeCategory = "Category items"
-itemListListTypeLastseen = "Last seen items"
-itemListListTypeTaglist = "Items with tags"
+; Item list
 itemListCategoryIdLabel = "Category ID"
 itemListCategoryIdTooltip = "Select the category from which the item list is generated."
-itemListTagIdLabel = "Tag"
-itemListTagIdTooltip = "Enter the tag ID from which the item list is generated."
 itemListItemSortLabel = "Item sorting"
 itemListItemSortTooltip = "Select the type of item sorting."
+itemListLabel = "Item list"
+itemListListTypeCategory = "Category items"
+itemListListTypeLabel = "Item list type"
+itemListListTypeLastseen = "Last seen items"
+itemListListTypeTaglist = "Items with tags"
+itemListListTypeTooltip = "Select the type of item list."
 itemListMaxItemsLabel = "Maximum number of displayed items"
 itemListMaxItemsTooltip = "Enter the maximum number of items displayed on the list."
-itemListPlaceholderListHeader = "Item list"
 itemListPlaceholderItemName = "Item name"
 itemListPlaceholderItemPrice = "Item price"
+itemListPlaceholderListHeader = "Item list"
+itemListTagIdLabel = "Tag"
+itemListTagIdTooltip = "Enter the tag ID from which the item list is generated."
