--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -1,7 +1,7 @@
-; Header
-headerLabel = "Header"
-headerTextLabel = "Headertext"
-headerTextTooltip = "Headertext eingeben."
+; Title bar
+titleBarLabel = "Header"
+titleBarTextLabel = "Headertext"
+titleBarTextTooltip = "Headertext eingeben."
 ; Image box
 imageBoxCategoryIdLabel = "Kategorie-ID"
 imageBoxCategoryIdTooltip = "Name und Bild werden angezeigt."
