CHANGE Widget.properties - rework header texts

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -1,7 +1,7 @@
 ; Title bar
-titleBarLabel = "Header"
-titleBarTextLabel = "Headertext"
-titleBarTextTooltip = "Headertext eingeben."
+titleBarLabel = "Titelleise"
+titleBarTextLabel = "Titelleiste Text"
+titleBarTextTooltip = "Text für die Titelleiste eingeben."
 ; Image box
 imageBoxCategoryIdLabel = "Kategorie-ID"
 imageBoxCategoryIdTooltip = "Name und Bild werden angezeigt."
