--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -1,7 +1,7 @@
-; Header
-headerLabel = "Header"
-headerTextLabel = "Header text"
-headerTextTooltip = "Enter the header text."
+; Title bar
+titleBarLabel = "Title bar"
+titleBarTextLabel = "Title bar text"
+titleBarTextTooltip = "Enter the title bar text."
 ; Image box
 imageBoxCategoryIdLabel = "Category ID"
 imageBoxCategoryIdTooltip = "Name and image are displayed."
