CHANGE contentWidgets - add translations for grid widgets

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -1,7 +1,20 @@
-; Title bar
-titleBarLabel = "Titelleise"
-titleBarTextLabel = "Titelleiste Text"
-titleBarTextTooltip = "Text für die Titelleiste eingeben."
+; Grid
+gridFourColumnLabel = "Raster mit 4 Spalten"
+gridThreeColumnLabel = "Raster mit 3 Spalten"
+gridThreeColumnLayoutLabel = "Layout"
+gridThreeColumnLayoutOneStackedToTwo = "1 (gestapelt) : 2"
+gridThreeColumnLayoutOneToOneToOne = "1 : 1 : 1"
+gridThreeColumnLayoutOneToOneToTwo = "1 : 1 : 2"
+gridThreeColumnLayoutOneToTwoToOne = "1 : 2 : 1"
+gridThreeColumnLayoutTooltip = "(platzhalter) hier bestimmen Sie das layout vom grid"
+gridThreeColumnLayoutTwoToOneStacked = "2 : 1 (gestapelt)"
+gridThreeColumnLayoutTwoToOneToOne = "2 : 1 : 1"
+gridTwoColumnLabel = "Raster mit 2 Spalten"
+gridTwoColumnLayoutLabel = "Layout"
+gridTwoColumnLayoutOneToOne = "1 : 1"
+gridTwoColumnLayoutOneToTwo = "1 : 2"
+gridTwoColumnLayoutTooltip = "(platzhalter) hier bestimmen Sie das layout vom grid"
+gridTwoColumnLayoutTwoToOne = "2 : 1"
 ; Image box
 imageBoxCategoryIdLabel = "Kategorie-ID"
 imageBoxCategoryIdTooltip = "Name und Bild werden angezeigt."
@@ -50,3 +63,7 @@ itemListPlaceholderItemPrice = "Artikelpreis"
 itemListPlaceholderListHeader = "Artikelliste"
 itemListTagIdLabel = "Tag"
 itemListTagIdTooltip = "Tag-ID eingeben, anhand welcher die Artikelliste erstellt wird."
+; Title bar
+titleBarLabel = "Titelleise"
+titleBarTextLabel = "Titelleiste Text"
+titleBarTextTooltip = "Text für die Titelleiste eingeben."
