--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -1,7 +1,20 @@
-; Title bar
-titleBarLabel = "Title bar"
-titleBarTextLabel = "Title bar text"
-titleBarTextTooltip = "Enter the title bar text."
+; Grid
+gridFourColumnLabel = "Four column grid"
+gridThreeColumnLabel = "Three column grid"
+gridThreeColumnLayoutLabel = "Layout"
+gridThreeColumnLayoutOneStackedToTwo = "1 (stacked) : 2"
+gridThreeColumnLayoutOneToOneToOne = "1 : 1 : 1"
+gridThreeColumnLayoutOneToOneToTwo = "1 : 1 : 2"
+gridThreeColumnLayoutOneToTwoToOne = "1 : 2 : 1"
+gridThreeColumnLayoutTooltip = "(platzhalter) hier bestimmen Sie das layout vom grid"
+gridThreeColumnLayoutTwoToOneStacked = "2 : 1 (stacked)"
+gridThreeColumnLayoutTwoToOneToOne = "2 : 1 : 1"
+gridTwoColumnLabel = "Two column grid"
+gridTwoColumnLayoutLabel = "Layout"
+gridTwoColumnLayoutOneToOne = "1 : 1"
+gridTwoColumnLayoutOneToTwo = "1 : 2"
+gridTwoColumnLayoutTooltip = "(platzhalter) hier bestimmen Sie das layout vom grid"
+gridTwoColumnLayoutTwoToOne = "2 : 1"
 ; Image box
 imageBoxCategoryIdLabel = "Category ID"
 imageBoxCategoryIdTooltip = "Name and image are displayed."
@@ -50,3 +63,7 @@ itemListPlaceholderItemPrice = "Item price"
 itemListPlaceholderListHeader = "Item list"
 itemListTagIdLabel = "Tag"
 itemListTagIdTooltip = "Enter the tag ID from which the item list is generated."
+; Title bar
+titleBarLabel = "Title bar"
+titleBarTextLabel = "Title bar text"
+titleBarTextTooltip = "Enter the title bar text."
