CHANGE Widget.properties - replace ids with picker texts

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -6,20 +6,20 @@ gridThreeColumnLayoutOneStackedToTwo = "1 (gestapelt) : 2"
 gridThreeColumnLayoutOneToOneToOne = "1 : 1 : 1"
 gridThreeColumnLayoutOneToOneToTwo = "1 : 1 : 2"
 gridThreeColumnLayoutOneToTwoToOne = "1 : 2 : 1"
-gridThreeColumnLayoutTooltip = "(platzhalter) hier bestimmen Sie das layout vom grid"
+gridThreeColumnLayoutTooltip = "Raster-Layout wählen."
 gridThreeColumnLayoutTwoToOneStacked = "2 : 1 (gestapelt)"
 gridThreeColumnLayoutTwoToOneToOne = "2 : 1 : 1"
 gridTwoColumnLabel = "Raster mit 2 Spalten"
 gridTwoColumnLayoutLabel = "Layout"
 gridTwoColumnLayoutOneToOne = "1 : 1"
 gridTwoColumnLayoutOneToTwo = "1 : 2"
-gridTwoColumnLayoutTooltip = "(platzhalter) hier bestimmen Sie das layout vom grid"
+gridTwoColumnLayoutTooltip = "Raster-Layout wählen."
 gridTwoColumnLayoutTwoToOne = "2 : 1"
 ; Image box
-imageBoxCategoryIdLabel = "Kategorie-ID"
+imageBoxCategoryIdLabel = "Kategorie"
 imageBoxCategoryIdTooltip = "Name und Bild werden angezeigt."
-imageBoxCustomImagePathLabel = "Bild-URL"
-imageBoxCustomImagePathTooltip = "Bild-URL eingeben. Dieses Bild ersetzt das Bild der Kategorie oder der Variante."
+imageBoxCustomImagePathLabel = "Bildauswahl"
+imageBoxCustomImagePathTooltip = "Bild auswählen. Dieses Bild ersetzt das Bild der Kategorie oder der Variante."
 imageBoxImageSizeContain = "Skaliert"
 imageBoxImageSizeCover = "Volle Breite"
 imageBoxImageSizeLabel = "Größe des Bilds"
@@ -33,20 +33,20 @@ imageBoxStyleLarge = "Name (groß) und Bild"
 imageBoxStyleSmall = "Name (klein) und Bild"
 imageBoxStyleTooltip = "Stil der Box auswählen."
 imageBoxVariationIdLabel = "Varianten-ID"
-imageBoxVariationIdTooltip = "Name und Bild werden angezeigt. Wenn eine Kategorie-ID angegeben ist, greift die Varianten-ID nicht."
+imageBoxVariationIdTooltip = "Name und Bild werden angezeigt. Wenn eine Kategorie ausgewählt ist, greift die Varianten-ID nicht."
 ; Image carousel
-imageCarouselCategoryIdLabel = "Kategorie-ID"
+imageCarouselCategoryIdLabel = "Kategorie"
 imageCarouselCategoryIdTooltip = "Name und Bild werden angezeigt."
-imageCarouselCustomImagePathLabel = "Bild-URL"
-imageCarouselCustomImagePathTooltip = "Bild-URL eingeben. Dieses Bild ersetzt das Bild der Kategorie oder der Variante."
+imageCarouselCustomImagePathLabel = "Bildauswahl"
+imageCarouselCustomImagePathTooltip = "Bild auswählen. Dieses Bild ersetzt das Bild der Kategorie oder der Variante."
 imageCarouselLabel = "Bilderkarussell"
 imageCarouselSlide1 = "Slide 1"
 imageCarouselSlide2 = "Slide 2"
 imageCarouselSlide3 = "Slide 3"
 imageCarouselVariationIdLabel = "Varianten-ID"
-imageCarouselVariationIdTooltip = "Name und Bild werden angezeigt. Wenn eine Kategorie-ID angegeben ist, greift die Varianten-ID nicht."
+imageCarouselVariationIdTooltip = "Name und Bild werden angezeigt. Wenn eine Kategorie ausgewählt ist, greift die Varianten-ID nicht."
 ; Item list
-itemListCategoryIdLabel = "Kategorie-ID "
+itemListCategoryIdLabel = "Kategorie"
 itemListCategoryIdTooltip = "Kategorie wählen, anhand welcher die Artikelliste erstellt wird."
 itemListItemSortLabel = "Artikelsortierung"
 itemListItemSortTooltip = "Art der Artikelsortierung wählen."
