--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -6,20 +6,20 @@ gridThreeColumnLayoutOneStackedToTwo = "1 (stacked) : 2"
 gridThreeColumnLayoutOneToOneToOne = "1 : 1 : 1"
 gridThreeColumnLayoutOneToOneToTwo = "1 : 1 : 2"
 gridThreeColumnLayoutOneToTwoToOne = "1 : 2 : 1"
-gridThreeColumnLayoutTooltip = "(platzhalter) hier bestimmen Sie das layout vom grid"
+gridThreeColumnLayoutTooltip = "Select grid layout."
 gridThreeColumnLayoutTwoToOneStacked = "2 : 1 (stacked)"
 gridThreeColumnLayoutTwoToOneToOne = "2 : 1 : 1"
 gridTwoColumnLabel = "Two column grid"
 gridTwoColumnLayoutLabel = "Layout"
 gridTwoColumnLayoutOneToOne = "1 : 1"
 gridTwoColumnLayoutOneToTwo = "1 : 2"
-gridTwoColumnLayoutTooltip = "(platzhalter) hier bestimmen Sie das layout vom grid"
+gridTwoColumnLayoutTooltip = "Select grid layout."
 gridTwoColumnLayoutTwoToOne = "2 : 1"
 ; Image box
-imageBoxCategoryIdLabel = "Category ID"
+imageBoxCategoryIdLabel = "Category"
 imageBoxCategoryIdTooltip = "Name and image are displayed."
-imageBoxCustomImagePathLabel = "Image URL"
-imageBoxCustomImagePathTooltip = "Enter the image URL. This image replaces the category or variation image."
+imageBoxCustomImagePathLabel = "Image selection"
+imageBoxCustomImagePathTooltip = "Select an image. This image replaces the category or variation image."
 imageBoxImageSizeContain = "Resized"
 imageBoxImageSizeCover = "Fullwidth"
 imageBoxImageSizeLabel = "Image size"
@@ -33,20 +33,20 @@ imageBoxStyleLarge = "Name (large) and image"
 imageBoxStyleSmall = "Name (small) and image"
 imageBoxStyleTooltip = "Select box style"
 imageBoxVariationIdLabel = "Variation ID"
-imageBoxVariationIdTooltip = "Name and image are displayed. If a category ID has been entered, the variation ID does not apply."
+imageBoxVariationIdTooltip = "Name and image are displayed. If a category has been selected, the variation ID does not apply."
 ; Image carousel
-imageCarouselCategoryIdLabel = "Category ID"
+imageCarouselCategoryIdLabel = "Category"
 imageCarouselCategoryIdTooltip = "Name and image are displayed."
-imageCarouselCustomImagePathLabel = "Image URL"
-imageCarouselCustomImagePathTooltip = "Enter the image URL. This image replaces the category or variation image."
+imageCarouselCustomImagePathLabel = "Image selection"
+imageCarouselCustomImagePathTooltip = "Select an image. This image replaces the category or variation image."
 imageCarouselLabel = "Image carousel"
 imageCarouselSlide1 = "Slide 1"
 imageCarouselSlide2 = "Slide 2"
 imageCarouselSlide3 = "Slide 3"
 imageCarouselVariationIdLabel = "Variation ID"
-imageCarouselVariationIdTooltip = "Name and image are displayed. If a category ID has been entered, the variation ID does not apply."
+imageCarouselVariationIdTooltip = "Name and image are displayed. If a category has been selected, the variation ID does not apply."
 ; Item list
-itemListCategoryIdLabel = "Category ID"
+itemListCategoryIdLabel = "Category"
 itemListCategoryIdTooltip = "Select the category from which the item list is generated."
 itemListItemSortLabel = "Item sorting"
 itemListItemSortTooltip = "Select the type of item sorting."
