--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -206,9 +206,9 @@ itemExclusive = "zzgl."
 itemFilter = "Filter"
 itemFrom = "ab "
 itemInclVAT = "inkl. ges. MwSt."
-ItemList1ListName = "Name"
-ItemList2ListName = "Name"
-ItemList3ListName = "Name"
+itemList1ListName = "Name"
+itemList2ListName = "Name"
+itemList3ListName = "Name"
 itemListLastSeen = "Zuletzt angesehen"
 itemName_asc = "Name A-Z"
 itemName_desc = "Name Z-A"
