--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -206,9 +206,9 @@ itemExclusive = "excl."
 itemFilter = "Filter"
 itemFrom = "from "
 itemInclVAT = "Incl. VAT"
-ItemList1ListName = "Name"
-ItemList2ListName = "Name"
-ItemList3ListName = "Name"
+itemList1ListName = "Name"
+itemList2ListName = "Name"
+itemList3ListName = "Name"
 itemListLastSeen = "Last seen"
 itemName_asc = "Name A-Z"
 itemName_desc = "Name Z-A"
